# vcf-log-cli

./: .gitignore  README.md  build.sh  pyproject.toml
kazi_log/: __init__.py  __main__.py  db.py  logfiles.py  results.py  start.py  upgradeHelperOffline.py  workflow.py
kazi_log/lib/custom/: __init__.py  formatting.py  signatures.py  utils.py
kazi_log/lib/snake_cli/: snake.py
vcf_log_cli/: __init__.py  __main__.py  db.py  logfiles.py  results.py  start.py  upgradeHelperOffline.py  workflow.py
vcf_log_cli/data/: version_releaseNotes
vcf_log_cli/lib/: __init__.py
vcf_log_cli/lib/custom/: formatting.py  utils.py
vcf_log_cli/lib/snake_cli/: snake.py
